UI style changes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
             <a href="#" style="float: left; padding-left: 250px; font-size: 25px; color: #003366;" onclick="authContext.login(); return false;">Log in</a>  
         </p>
         <p id="username" style="float: right; padding-top: 30 px; font-size: 20px; padding-right: 250px; color: #003366;"></p>
-        <pre id="api_response"></pre>
+        <pre id="api_response" style="float: right; padding-top: 30 px; font-size: 20px; padding-right: 250px; color: #003366;"></pre> 
      
        <script type="text/javascript">
         var tokenGlobal = "";
