--- a/src/views/home.html
+++ b/src/views/home.html
@@ -20,12 +20,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body> 
+<body style="background-color: #80c1ff"> 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div  class="navbar-header" style="float: left; padding-left: 400px; ">
+            <div  class="navbar-header" style="float: left; padding-left: 400px;">
                 <p style="font-size: 20px; color: #1aa3ff">Navishare Portal POC</p>
             </div>  
             <!-- /.navbar-collapse -->
